--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -1,14 +1,19 @@
-.display-4 {
-  margin: 5rem 0;
+//.display-4 {
+//  margin: 5rem 0;
+//
+//  &-intro {
+//    display: inline-block;
+//    font-weight: bold;
+//  }
+//
+//  &-desc {
+//    display: block;
+//    font-weight: normal;
+//    font-size: 1rem;
+//
+//    //@include media-breakpoint-up(lg) {
+//      //font-size: 1.5 rem;
+// }
+//}
 
-  &-intro {
-    display: inline-block;
-    font-weight: bold;
-  }
 
-  &-desc {
-    display: block;
-    font-weight: normal;
-    font-size: 2rem;
-  }
-}
