--- a/src/scss/elements/_navbar.scss
+++ b/src/scss/elements/_navbar.scss
@@ -11,6 +11,7 @@
       &:hover {
         color: $secondary;
         text-decoration: underline;
+        font-weight: bolder;
       }
     }
   }
