finished section introText (for all screen sizes)

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -5,6 +5,21 @@
   padding: 1rem 0;
 }
 
+.text {
+  text-align: center;
+  font-style: italic;
+  color: white;
+  padding: 3% 10%;
+
+  @include media-breakpoint-up(lg) {
+    font-size: 1.2rem;
+  }
+  @include media-breakpoint-up(xxl) {
+    font-size: 1.5rem;
+  }
+
+}
+
 
 
 
