--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import 'custom';
 @import 'elements/_navbar';
 @import 'elements/_landingPageIntro';
+@import 'elements/_introText';
 @import 'components/_typography';
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap");
 
@@ -8,8 +9,8 @@
   font-family: "Montserrat", sans-serif;
 }
 
-body {
-
+.container-fluid {
+  padding: 0;
 }
 
 
