adjusting padding for LandingPageOffer in mobile

--- a/src/scss/elements/_landingPageOffer.scss
+++ b/src/scss/elements/_landingPageOffer.scss
@@ -1,3 +1,8 @@
+.col-offer {
+  padding-left: 40px;
+  padding-right: 40px
+}
+
 .img-offer {
   width: 45px;
   height: 45px;
@@ -6,8 +11,6 @@
     width: 58px;
     height: 58px;
   }
-
-
 }
 
 .img-background {
