--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,8 +1,10 @@
 //THEME COLORS:
 $gold: #D7AE1F;
 $green: #6CA483;
+$lightgrey: #F8F9FA;
 
 $primary: $gold;
 $secondary: $green;
+
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
