change of primary color to lightgold

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,9 +1,10 @@
 //THEME COLORS:
 $gold: #D7AE1F;
+$lightgold: #dfbf58;
 $green: #6CA483;
 $lightgrey: #F8F9FA;
 
-$primary: $gold;
+$primary: $lightgold;
 $secondary: $green;
 
 
