--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,7 @@
 @import 'elements/_introText';
 @import 'elements/_landingPageOffer';
 @import 'elements/_landingPageAboutMe';
+@import 'elements/_footer';
 @import 'components/_typography';
 @import 'components/_buttons';
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap");
