--- a/src/scss/elements/_landingPageIntro.scss
+++ b/src/scss/elements/_landingPageIntro.scss
@@ -1,11 +1,11 @@
 .intro-section {
   @include media-breakpoint-up(lg) {
-    margin: 150px 0 50px 0;
+    //margin: 150px 0 50px 0;
     }
 }
 
 .img-intro {
   @include media-breakpoint-up(md) {
-    width: 70%;
+    //width: 70%;
   }
 }
