--- a/src/scss/elements/_landingPageIntro.scss
+++ b/src/scss/elements/_landingPageIntro.scss
@@ -1,11 +1,12 @@
 .intro-section {
-  @include media-breakpoint-up(lg) {
-    //margin: 150px 0 50px 0;
-    }
+  background-image: url("../../assets/photoBig.png");
+  background-position: left;
+  height: 70vh;
 }
 
-.img-intro {
-  @include media-breakpoint-up(md) {
-    //width: 70%;
-  }
-}
+//.img-intro {
+//  @include media-breakpoint-up(md) {
+//    width: 150%;
+//  }
+//}
+
