--- a/src/scss/elements/_landingPageIntro.scss
+++ b/src/scss/elements/_landingPageIntro.scss
@@ -1,10 +1,11 @@
-.intro-section {
-  //background-image: url("../../assets/photoBig.png");
-  //background-position: left;
-
-}
-
 .img-intro {
-  max-width: 60%;
+  width: 50%;
+
+  @include media-breakpoint-up(md) {
+    width: 70%;
+  }
+  @include media-breakpoint-up(lg) {
+    width: 60%;
+  }
 }
 
