--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -34,7 +34,7 @@
   text-align: justify;
   font-size: 0.8rem;
 
-  @include media-breakpoint-up(xxl) {
+  @include media-breakpoint-up(lg) {
     font-size: 1rem;
   }
 }
