--- a/src/scss/elements/_navbar.scss
+++ b/src/scss/elements/_navbar.scss
@@ -8,10 +8,31 @@
 
     a {
       color: $black;
+      letter-spacing: .05rem;
+      transition: .5s all ease-in-out;
+      position: relative;
+      will-change: transform;
+
+      &:before {
+        content: '';
+        border-bottom: .1rem solid $black;
+        display: block;
+        position: absolute;
+        background: transparent;
+        top: 0;
+        bottom: 0;
+        left: 100%;
+        right: 100%;
+        transition: .3s all ease-in-out;
+      }
       &:hover {
+        letter-spacing: .1rem;
         color: $secondary;
-        text-decoration: underline;
-        font-weight: bolder;
+      }
+      &:hover:before {
+        left: 0;
+        right: 0;
+        border-bottom: .1rem solid $secondary;
       }
     }
   }
