added basic html and css for AboutMe component

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -28,6 +28,13 @@
   }
 }
 
+//HEADER
+
+.header {
+  font-weight: bold;
+  margin: 1rem 0;
+}
+
 //LANDING PAGE OFFER
 .basic-text {
   text-align: justify;
