--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,8 @@
 @import 'elements/_footer';
 @import 'components/_typography';
 @import 'components/_buttons';
+@import 'components/_positioning';
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap");
 
 * {
@@ -20,5 +22,4 @@
 .content-container {
   height: calc(100vh - 56px);
 }
-
 
