adjusting displaying AboutMe component for mobile devices

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,7 @@
 @import 'elements/_introText';
 @import 'elements/_landingPageOffer';
 @import 'elements/_landingPageAboutMe';
+@import 'elements/_aboutMe';
 @import 'elements/_footer';
 @import 'components/_typography';
 @import 'components/_buttons';
