--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -15,16 +15,31 @@
 }
 
 //INTRO TEXT
-.text {
+.introText {
   font-style: italic;
   color: white;
-  padding: 5% 12%;
+  padding: 1rem 2.5rem;
+  margin-bottom: 0;
+  text-align: center;
 
   @include media-breakpoint-up(lg) {
+    padding: 2rem 0;
     font-size: 1.2rem;
   }
   @include media-breakpoint-up(xxl) {
+    padding: 3rem 0;
     font-size: 1.3rem;
+  }
+}
+
+.introHeader {
+  text-align: center;
+  color: white;
+  margin: 0 !important;
+  padding-top: 1rem;
+
+  @include media-breakpoint-up(lg) {
+    padding-top: 2rem;
   }
 }
 
@@ -35,7 +50,7 @@
   margin: 1rem 0;
 }
 
-//LANDING PAGE OFFER
+//BASIC TEXT
 .basic-text {
   text-align: justify;
   font-size: 0.8rem;
