styling the accordion in aboutMediation component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import 'elements/_landingPageOffer';
 @import 'elements/_landingPageAboutMe';
 @import 'elements/_aboutMe';
+@import 'elements/_aboutMediation';
 @import 'elements/_footer';
 @import 'components/_typography';
 @import 'components/_buttons';
