--- a/src/scss/elements/_aboutMediation.scss
+++ b/src/scss/elements/_aboutMediation.scss
@@ -1,8 +1,13 @@
-.containerAccordion {
-  max-width: 70%;
+.accordion{
+  margin: 2.5rem 0;
+
+  @include media-breakpoint-up(md) {
+    padding: 0 2.5rem;
+}
 }
 
 .accordion-button {
+
 
   &:not(.collapsed) {
     background: rgba($secondary, 0.75);
@@ -16,6 +21,4 @@
   &:focus {
     box-shadow: none;
   }
-
-
 }
