fixed bug in displaing menu in Navbar (moving it up in larger screen sizes)

--- a/src/scss/elements/_navbar.scss
+++ b/src/scss/elements/_navbar.scss
@@ -4,6 +4,11 @@
   left: 0;
   background-color: $white;
   width: 100vw;
+
+  @include media-breakpoint-up(lg) {
+    top: 13px;
+    background: none;
+  }
 }
 
 .menu {
