--- a/src/scss/components/_mixins.scss
+++ b/src/scss/components/_mixins.scss
@@ -1,1 +1,4 @@
-// zrobić mixin abolute-top dla kafelków oferty na landing page
+//@mixin shadowTransition {
+//  transform: scale(1.05);
+//  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+//}
