--- a/src/scss/elements/_landingPageOffer.scss
+++ b/src/scss/elements/_landingPageOffer.scss
@@ -30,11 +30,13 @@
 }
 
 .offer-card {
-  box-shadow: 0 10px 12px rgba(0,0,0,.08), 0 0 10px rgba(0,0,0,.05);
-  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  box-shadow: $shadow;
+  //transition: $shadowTransition;
 
   &:hover {
+    //@include shadowTransition;
     transform: scale(1.05);
     box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
   }
 }
+
