styling the checkbox

--- a/src/scss/elements/_contact.scss
+++ b/src/scss/elements/_contact.scss
@@ -10,5 +10,18 @@
 }
 
 .form-check-input {
-  
+  background-color: $lightgrey;
+  border-radius: 0;
+  cursor: pointer;
+
+  &:focus {
+    background-color: rgba($secondary, 0.45);
+    box-shadow: none;
+    border: none;
+  }
+}
+
+input[type="checkbox"]:checked {
+  background: rgba($secondary, 0.45);
+  border: none;
 }
