styling the contactComponent + code refactoring in Footer

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -60,20 +60,39 @@
   }
 }
 
-//FOOTER
-.footer-text {
-  font-size: 0.6rem;
-
-  @include media-breakpoint-up(md) {
-    font-size: 0.8rem;
-  }
-}
 
 //FORM:
 
 .form-check-label {
   font-size: 0.7rem;
 }
+
+//CONTACT & FOOTER
+
+.footer-text {
+  font-size: 0.6rem;
+  display: inline;
+  margin: 0 0.5rem;
+  padding-bottom: 0.5rem;
+
+  @include media-breakpoint-up(md) {
+    font-size: 0.8rem;
+  }
+}
+
+.contactType {
+  margin-top: 2rem;
+}
+
+.contactIcon {
+  display: inline;
+}
+
+.contactText {
+  display: inline;
+}
+
+
 
 
 
