--- a/src/scss/elements/_contact.scss
+++ b/src/scss/elements/_contact.scss
@@ -1,6 +1,7 @@
 .form-control {
   background-color: $lightgrey;
   border-radius: 0;
+  border: none;
 
   &:focus {
     background-color: rgba($secondary, 0.45);
