--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,17 +1,16 @@
-@import 'custom';
-@import 'elements/_navbar';
-@import 'elements/_landingPageHead';
-@import 'elements/_introText';
-@import 'elements/_landingPageOffer';
-@import 'elements/_landingPageAboutMe';
-@import 'elements/_aboutMe';
-@import 'elements/_aboutMediation';
-@import 'elements/_contact';
-@import 'elements/_footer';
-@import 'components/_typography';
-@import 'components/_buttons';
-@import 'components/_positioning';
-
+@import "custom";
+@import "elements/_navbar";
+@import "elements/_landingPageHead";
+@import "elements/_introText";
+@import "elements/_landingPageOffer";
+@import "elements/_landingPageAboutMe";
+@import "elements/_aboutMe";
+@import "elements/_aboutMediation";
+@import "elements/_contact";
+@import "elements/_footer";
+@import "components/_typography";
+@import "components/_buttons";
+@import "components/_positioning";
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,200;1,400;1,700&display=swap");
 
@@ -26,4 +25,3 @@
 .content-container {
   height: calc(100vh - 56px);
 }
-
