--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -6,8 +6,8 @@
   text-transform: uppercase;
   position: relative;
   will-change: transform;
-  letter-spacing: .05rem;
-  transition: .5s all ease-in-out;
+  letter-spacing: 0.05rem;
+  transition: 0.5s all ease-in-out;
   background: transparent;
   border: none;
   font-size: 0.8rem;
@@ -18,9 +18,9 @@
   }
 
   &:before {
-    content: '';
-    border-top: .1rem solid $black;
-    border-bottom: .1rem solid $black;
+    content: "";
+    border-top: 0.1rem solid $black;
+    border-bottom: 0.1rem solid $black;
     display: block;
     position: absolute;
     background: transparent;
@@ -28,18 +28,18 @@
     bottom: 0;
     left: 100%;
     right: 100%;
-    transition: .3s all ease-in-out;
+    transition: 0.3s all ease-in-out;
   }
 
   &:hover {
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     color: $secondary;
   }
 
   &:hover:before {
     left: 0;
     right: 0;
-    border-top: .1rem solid $secondary;
-    border-bottom: .1rem solid $secondary;
+    border-top: 0.1rem solid $secondary;
+    border-bottom: 0.1rem solid $secondary;
   }
 }
