--- a/src/scss/elements/_navbar.scss
+++ b/src/scss/elements/_navbar.scss
@@ -13,20 +13,19 @@
 }
 
 .menu {
-
   li {
     padding: 0 1.2rem;
 
     a {
       color: $black;
-      letter-spacing: .05rem;
-      transition: .5s all ease-in-out;
+      letter-spacing: 0.05rem;
+      transition: 0.5s all ease-in-out;
       position: relative;
       will-change: transform;
 
       &:before {
-        content: '';
-        border-bottom: .1rem solid $black;
+        content: "";
+        border-bottom: 0.1rem solid $black;
         display: block;
         position: absolute;
         background: transparent;
@@ -34,18 +33,17 @@
         bottom: 0;
         left: 100%;
         right: 100%;
-        transition: .3s all ease-in-out;
+        transition: 0.3s all ease-in-out;
       }
       &:hover {
-        letter-spacing: .1rem;
+        letter-spacing: 0.1rem;
         color: $secondary;
       }
       &:hover:before {
-
         @include media-breakpoint-up(md) {
           left: 0;
           right: 0;
-          border-bottom: .1rem solid $secondary;
+          border-bottom: 0.1rem solid $secondary;
         }
       }
     }
@@ -58,7 +56,7 @@
   width: 20px;
   height: 10px;
   position: relative;
-  transition: .5s ease-in-out;
+  transition: 0.5s ease-in-out;
 
   span {
     margin: 0;
@@ -85,7 +83,7 @@
   opacity: 1;
   left: 0;
   transform: rotate(0deg);
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
 }
 
 .middle-bar {
@@ -123,4 +121,3 @@
   margin-top: 20px;
   transform: rotate(0deg);
 }
-
