change of the colors palette

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,10 +1,11 @@
 //THEME COLORS:
 $gold: #d7ae1f;
-$lightgold: #dfbf58;
+$blue: #316785;
+$lightgold: #D7AE1F;
 $green: #6ca483;
 $lightgrey: #f8f9fa;
 
-$primary: $lightgold;
+$primary: $blue;
 $secondary: $green;
 
 //SHADOW
