--- a/src/scss/elements/_landingPageOffer.scss
+++ b/src/scss/elements/_landingPageOffer.scss
@@ -14,7 +14,7 @@
 }
 
 .img-background {
-  background-color: $primary;
+  background-color: $lightgold;
   border-radius: 50%;
   height: 70px;
   width: 70px;
