changing the position of navbar cointainer in mobile view

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2,11 +2,10 @@
 $gold: #d7ae1f;
 $blue: #316785;
 $lightgold: #D7AE1F;
-$green: #6ca483;
 $lightgrey: #f8f9fa;
 
 $primary: $blue;
-$secondary: $green;
+$secondary: $lightgold;
 
 //SHADOW
 $shadow: 0 10px 12px rgba(0, 0, 0, 0.08), 0 0 10px rgba(0, 0, 0, 0.05);
