fixed bug i navbar, now the menu items are properly positioned in relations with logo

--- a/src/scss/elements/_navbar.scss
+++ b/src/scss/elements/_navbar.scss
@@ -6,14 +6,12 @@
   width: 100vw;
 
   @include media-breakpoint-up(lg) {
-    top: 13px;
-    left: -1rem;
-    background: none;
+    position: static;
   }
 }
 
 .logo {
-  width: 60px;
+  width: 80px;
   cursor: pointer;
 }
 
