--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -72,11 +72,10 @@
 //CONTACT & FOOTER
 
 .footer-text {
-  font-size: 0.6rem;
+  font-size: 0.875rem;
   color: white;
   display: inline;
-  margin: 0 0.5rem;
-  padding-bottom: 0.5rem;
+  margin: 0;
 
   @include media-breakpoint-up(md) {
     font-size: 1rem;
@@ -89,11 +88,6 @@
   @include media-breakpoint-up(md) {
     margin: 2rem 0;
   }
-}
-
-.contactIcon {
-  display: inline;
-  color: white;
 }
 
 .contactText {
