--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -1,3 +1,10 @@
 .footer {
   background-color: $primary;
 }
+
+.contactIcon {
+  display: inline;
+  color: white;
+  height: 10px;
+  margin-right: 0.4rem;
+}
