--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -7,4 +7,8 @@
   color: white;
   height: 0.875rem;
   margin-right: 0.4rem;
+
+  @include media-breakpoint-up(md) {
+    margin-right: 0.6rem;
+  }
 }
