--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -17,7 +17,7 @@
 //INTRO TEXT
 .introText {
   color: white;
-  padding: 1rem 2.5rem;
+  //padding: 1rem 2.5rem;
   margin-bottom: 0;
   text-align: center;
 
