--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -18,9 +18,9 @@
 //INTRO TEXT
 .introText {
   color: white;
-  //padding: 1rem 2.5rem;
   margin-bottom: 0;
   text-align: center;
+  font-size: 0.875rem;
 
   @include media-breakpoint-up(lg) {
     padding: 2rem 0;
