--- a/src/scss/elements/_contact.scss
+++ b/src/scss/elements/_contact.scss
@@ -2,6 +2,11 @@
   background-color: $lightgrey;
   border-radius: 0;
   border: none;
+  font-size: 0.875rem;
+
+  @include media-breakpoint-up(md) {
+    font-size: 1rem;
+  }
 
   &:focus {
     background-color: rgba($secondary, 0.45);
@@ -16,9 +21,7 @@
   cursor: pointer;
 
   &:focus {
-    background-color: rgba($secondary, 0.45);
     box-shadow: none;
-    border: none;
   }
 }
 
