improved styles for contact on mobile desktop, using reusable ContactData component in ContactPage

--- a/src/scss/components/_positioning.scss
+++ b/src/scss/components/_positioning.scss
@@ -2,13 +2,13 @@
   text-align: center;
 }
 
-.contactType {
-  margin: 1.5rem 0;
-
-  @include media-breakpoint-up(md) {
-    margin: 2rem 0;
-  }
-}
+//.contactType {
+//  margin: 1.5rem 0;
+//
+//  @include media-breakpoint-up(md) {
+//    margin: 2rem 0;
+//  }
+//}
 
 .contactText {
   display: inline;
