--- a/src/scss/elements/_contact.scss
+++ b/src/scss/elements/_contact.scss
@@ -19,6 +19,8 @@
   background-color: $lightgrey;
   border-radius: 0;
   cursor: pointer;
+  height: 1rem;
+  width: 1rem;
 
   &:focus {
     box-shadow: none;
