working on form error styles

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -83,5 +83,16 @@
   }
 }
 
+.error-text {
+  color: $red-400;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 2rem;
+}
 
-
+.error-consent {
+  color: $red-400;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 3rem;
+}
