finished styling navBar for all devices; improving hovering global links

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,8 +27,10 @@
 }
 
 a {
-  text-decoration: none;
   color: black;
+  transition: 0.5s all ease-in-out;
+  will-change: transform;
+  text-decoration: none;
 
   &:hover {
     color: $lightgold;
