--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -1,3 +1,11 @@
+.nav-link {
+  font-size: 0.875rem;
+
+  @include media-breakpoint-up(lg) {
+    font-size: 1rem;
+  }
+}
+
 //LANDING PAGE HEAD SECTION
 .hero-name {
   font-weight: bold;
