--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -1,7 +1,7 @@
 .nav-link {
   font-size: 0.875rem;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     font-size: 1rem;
   }
 }
@@ -9,6 +9,13 @@
 //LANDING PAGE HEAD SECTION
 .hero-name {
   font-weight: bold;
+
+  @include media-breakpoint-up(lg) {
+    font-size: 2rem;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 2.5rem;
+  }
 }
 .hero-desc {
   padding-bottom: 0.1rem;
@@ -19,7 +26,14 @@
   }
 
   @include media-breakpoint-up(md) {
+    font-size: 1.2rem;
     padding-bottom: 0.7rem;
+  }
+  @include media-breakpoint-up(lg) {
+    font-size: 1.5rem;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 1.5rem;
   }
 }
 
