--- a/src/scss/elements/_navbar.scss
+++ b/src/scss/elements/_navbar.scss
@@ -14,6 +14,7 @@
     a {
       color: $black;
       transition: 0.5s all ease-in-out;
+      letter-spacing: .05rem;
       position: relative;
       will-change: transform;
 
