--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -8,13 +8,24 @@
 
 //LANDING PAGE HEAD SECTION
 .hero-name {
-  font-weight: bold;
+  font-weight: 400;
+  line-height: 1.2;
+  color: $primary;
 
+  @include media-breakpoint-up(sm) {
+    font-size: 1.6rem;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: 1.8rem;
+  }
   @include media-breakpoint-up(lg) {
     font-size: 2rem;
   }
   @include media-breakpoint-up(xl) {
     font-size: 2.5rem;
+  }
+  @include media-breakpoint-up(xxl) {
+    font-size: 2.7rem;
   }
 }
 .hero-desc {
@@ -24,16 +35,22 @@
   &:last-of-type {
     padding-bottom: 1rem;
   }
+  @include media-breakpoint-up(sm) {
+    font-size: 1.2rem;
+  }
 
   @include media-breakpoint-up(md) {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     padding-bottom: 0.7rem;
   }
   @include media-breakpoint-up(lg) {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
   }
   @include media-breakpoint-up(xl) {
-    font-size: 1.7rem;
+    font-size: 2rem;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 2.2rem;
   }
 }
 
