--- a/src/scss/elements/_landingPageHero.scss
+++ b/src/scss/elements/_landingPageHero.scss
@@ -14,3 +14,12 @@
     max-width: 45%;
   }
 }
+
+.hero-imgBox {
+  @include media-breakpoint-up(xl) {
+    padding-left: 4.5rem;
+  }
+  @include media-breakpoint-up(xxl) {
+    padding-left: 5.5rem;
+  }
+}
