--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -6,7 +6,7 @@
   }
 }
 
-//LANDING PAGE HEAD SECTION
+//HERO
 .hero-name {
   font-weight: 400;
   line-height: 1.2;
@@ -66,6 +66,11 @@
     font-size: 1rem;
   }
 
+  @include media-breakpoint-up(md) {
+    padding: 1rem 0;
+    font-size: 1.1rem;
+  }
+
   @include media-breakpoint-up(lg) {
     padding: 2rem 0;
     font-size: 1.2rem;
@@ -92,10 +97,10 @@
 .header {
   font-weight: bold;
 
-  @include media-breakpoint-up(lg) {
-    margin: 1rem 0;
-    padding-top: 2rem;
-  }
+  //@include media-breakpoint-up(lg) {
+  //  margin: 1rem 0;
+  //  padding-top: 2rem;
+  //}
 }
 
 //BASIC TEXT
@@ -103,7 +108,7 @@
   text-align: justify;
   font-size: 0.875rem;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(md) {
     font-size: 1rem;
   }
 }
