--- a/src/scss/elements/_landingPageOffer.scss
+++ b/src/scss/elements/_landingPageOffer.scss
@@ -2,12 +2,17 @@
 }
 
 .img-offer {
-  width: 38px;
-  height: 38px;
+  width: 2.4rem;
+  height: 2.4rem;
+
+  @include media-breakpoint-up(xl) {
+    width: 2.8rem;
+    height: 2.8rem;
+  }
 
   @include media-breakpoint-up(xxl) {
-    width: 50px;
-    height: 50px;
+    width: 3rem;
+    height: 3rem;
   }
 }
 
