improved styles for aboutMe section, fixing some issues with positioning of offerSection, changing icon sizes in footer - everything regarding tablet and mobile devices

--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -8,7 +8,8 @@
   height: 0.875rem;
   margin-right: 0.4rem;
 
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(xl) {
+    height: 2rem;
     margin-right: 0.6rem;
   }
 }
