--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -9,7 +9,7 @@
   font-size: 0.8rem;
   color: white;
 
-  @include media-breakpoint-up(lg) {
+  @include media-breakpoint-up(sm) {
     font-size: 1rem;
   }
 
