--- a/src/scss/elements/_contact.scss
+++ b/src/scss/elements/_contact.scss
@@ -4,7 +4,7 @@
   border: none;
   font-size: 0.875rem;
 
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(sm) {
     font-size: 1rem;
   }
 
