--- a/src/scss/components/_positioning.scss
+++ b/src/scss/components/_positioning.scss
@@ -1,8 +1,4 @@
-.hero-row {
-  text-align: center;
-}
-
-.section-row {
+.sectionRow {
   margin-bottom: 3rem;
   margin-top: 0.5rem;
 
@@ -15,11 +11,7 @@
     margin-bottom: 5rem;
     margin-top: 2rem;
   }
-
 }
 
-.contactText {
-  display: inline;
-}
 
 
