--- a/src/scss/elements/_landingPageHero.scss
+++ b/src/scss/elements/_landingPageHero.scss
@@ -23,3 +23,50 @@
     padding-left: 6rem;
   }
 }
+
+.heroName {
+  font-weight: 400;
+  line-height: 1.2;
+  color: $primary;
+
+  @include media-breakpoint-up(sm) {
+    font-size: 1.6rem;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: 1.8rem;
+  }
+  @include media-breakpoint-up(lg) {
+    font-size: 2rem;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 2.5rem;
+  }
+  @include media-breakpoint-up(xxl) {
+    font-size: 2.7rem;
+  }
+}
+.heroDesc {
+  padding-bottom: 0.1rem;
+  margin: 0;
+
+  &:last-of-type {
+    padding-bottom: 1rem;
+  }
+  @include media-breakpoint-up(sm) {
+    font-size: 1.2rem;
+  }
+
+  @include media-breakpoint-up(md) {
+    font-size: 1.4rem;
+    padding-bottom: 0.7rem;
+  }
+  @include media-breakpoint-up(lg) {
+    font-size: 1.6rem;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 2rem;
+  }
+  @include media-breakpoint-up(xl) {
+    font-size: 2.2rem;
+  }
+}
